[gd_scene load_steps=4 format=2]

[ext_resource path="res://events/event2/jam-1.png.png" type="Texture" id=1]
[ext_resource path="res://events/event2/jamEvent.gd" type="Script" id=2]
[ext_resource path="res://skelbunny/SkelBunny.tscn" type="PackedScene" id=3]

[node name="jamEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jam-1png" type="Sprite" parent="."]
position = Vector2( 510.713, 301.625 )
scale = Vector2( 63.9315, 37.4588 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1023.0
margin_bottom = 607.0
color = Color( 0, 0, 0, 0.670588 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 224.0
margin_top = 3.0
margin_right = 442.0
margin_bottom = 162.0
rect_scale = Vector2( 3, 3 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = -0.00139832
anchor_right = -0.00139832
margin_left = 425.616
margin_top = 511.296
margin_right = 596.616
margin_bottom = 580.296
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="SkelBunny" parent="." instance=ExtResource( 3 )]
position = Vector2( -168.686, 227.182 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
